# Orbit

./: Makefile  README.md  package-lock.json  package.json
apps/api/: .env.example  Dockerfile  README.md  pyproject.toml
apps/api/src/orbit_api/: __init__.py  config.py  logging.py  main.py
apps/api/src/orbit_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/api/src/orbit_api/api/: __init__.py
apps/api/src/orbit_api/api/v1/: __init__.py  context.py  git.py  health.py  process.py  providers.py  router.py  search.py  tasks.py  tools.py  version.py  workspace.py
apps/api/src/orbit_api/core/: __init__.py  context.py  dependencies.py  providers.py  runtime.py  tools.py  workspace.py
apps/api/src/orbit_api/interfaces/: __init__.py  memory.py  planner.py  provider.py  runtime.py  tools.py
apps/api/tests/: test_context.py  test_filesystem.py  test_health.py  test_process.py  test_providers.py  test_search.py  test_tasks.py  test_tools.py  test_version.py
apps/api/workspace/: main.py  testfile.json  token.py
apps/web/: .env.example  .eslintrc.json  Dockerfile  next.config.js  package.json  tailwind.config.ts  tsconfig.json
apps/web/.next/: app-build-manifest.json  trace
apps/web/.next/server/: app-paths-manifest.json  server-reference-manifest.json  webpack-runtime.js
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: git-panel.tsx  (+3 more)
docker/: README.md  docker-compose.yml
docs/: architecture.md  development.md  philosophy.md
scripts/: README.md  dev.sh  format.sh  lint.sh  setup.sh
tests/: README.md
(+31 files in other folders)
