[project]
name = "orbit-api"
version = "0.2.0"
description = "Orbit backend runtime API (task runtime engine — no agent logic yet)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "structlog>=24.1,<25.0",
    "orbit-runtime",
    "orbit-tools",
    "orbit-context",
    "orbit-providers",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5,<1.0",
    "black>=24.4,<25.0",
    "pytest>=8.2,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "httpx>=0.27,<1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
ignore = []

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
